welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: ')' expected but '<-' found.
	for (( i <- 0 to getMondeHauteur() - 1) {
                 ^